--- a/ambevwebapp/src/main/webapp/WEB-INF/web.xml
+++ b/ambevwebapp/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,7 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
+
 	<display-name>Archetype Created Web Application</display-name>
 
 	<listener>
@@ -13,12 +14,23 @@
 		<servlet-name>Tiles Dispatch Servlet</servlet-name>
 		<servlet-class>org.apache.tiles.web.util.TilesDispatchServlet</servlet-class>
 	</servlet>
+	<servlet>
+        <servlet-name>ambevwebapp</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    
  	<servlet-mapping>
 		<servlet-name>Tiles Dispatch Servlet</servlet-name>
 		<url-pattern>*.tiles</url-pattern>
 	</servlet-mapping>
 	
-	<welcome-file-list>
+	<servlet-mapping>
+		<servlet-name>ambevwebapp</servlet-name>
+		<url-pattern>login.jsp</url-pattern>
+	</servlet-mapping>
+	
+ 	<welcome-file-list>
 		<welcome-file>login.jsp</welcome-file>
 	</welcome-file-list>
 	
