--- a/ambevwebapp/src/main/webapp/WEB-INF/web.xml
+++ b/ambevwebapp/src/main/webapp/WEB-INF/web.xml
@@ -27,11 +27,16 @@
 	
 	<servlet-mapping>
 		<servlet-name>ambevwebapp</servlet-name>
-		<url-pattern>login.jsp</url-pattern>
+		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	
  	<welcome-file-list>
 		<welcome-file>login.jsp</welcome-file>
+<!-- 		<welcome-file>/login.jsp</welcome-file>
+		<welcome-file>page/login.jsp</welcome-file>
+		<welcome-file>/page/login.jsp</welcome-file>
+		<welcome-file>WEB-INF/page/login.jsp</welcome-file>
+		<welcome-file>/WEB-INF/page/login.jsp</welcome-file> -->
 	</welcome-file-list>
 	
 </web-app>
